--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: required
 services:
     - docker
 
-before_install: 
-    - docker build -t vida_care_bi_microservices/vida-api-gateway .
-    - docker build -t vida_care_bi_microservices/vida-notes-service .
-    - docker build -t vida_care_bi_microservices/vida-operations-service .
-    - docker build -t vida_care_bi_microservices/vida-users-service .
+# before_install: 
+#     - docker build -t vida_care_bi_microservices/vida-api-gateway .
+#     - docker build -t vida_care_bi_microservices/vida-notes-service .
+#     - docker build -t vida_care_bi_microservices/vida-operations-service .
+#     - docker build -t vida_care_bi_microservices/vida-users-service .
 
 script:
     - docker-compose run app sh -c npm test
